--- a/frontend/src/listings/ListingDetailPage.css
+++ b/frontend/src/listings/ListingDetailPage.css
@@ -8,3 +8,7 @@
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   padding: 30px;
 }
+
+.ListingDetailPage-img{
+  max-width: 400px;
+}
