--- a/frontend/src/homepage/HomePage.css
+++ b/frontend/src/homepage/HomePage.css
@@ -1,4 +1,6 @@
-.AddListingPage {
+
+.HomePage {
+  max-height: 250px;
   margin-bottom: 1rem;
   color: white;
   background-color: rgb(19, 18, 26);
@@ -8,3 +10,4 @@
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   padding: 30px;
 }
+
