--- a/frontend/src/listings/ListingDetailPage.css
+++ b/frontend/src/listings/ListingDetailPage.css
@@ -3,7 +3,7 @@
   color: white;
   background-color: rgb(19, 18, 26);
   text-decoration: none;
-  border-radius: 10%;
+  border-radius: 20px;
   border: none;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   padding: 30px;
